--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=67bae48602577f4bbcc008f4c443140c
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+#DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://root:Ghislain2010@127.0.0.1:3306/eventbrote_oneweek_dev?serverVersion=8.0.19"
-# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+#DATABASE_URL="postgresql://macbook:@127.0.0.1:5432/eventbrote_oneweek_dev?serverVersion=12.6&charset=utf8"
 ###< doctrine/doctrine-bundle ###
